Remove code to bundle negative number in at scanning time - this causes a problem for an infix operator because it is treated as part of the number instead of an infix operator.  So, we have to defer application of the minus sign until we know it is a unary minus.